--- a/index.html
+++ b/index.html
@@ -12,11 +12,63 @@
 
     <!-- google Fonts -->
 
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/ddf0cbfff6.js" crossorigin="anonymous"></script>
+
     <!-- Custom Css -->
     <link rel="stylesheet" href="assets/css/style.css" />
 
 </head>
 <body>
-    
+    <!-- -------------------------------------
+        Header Start form here
+    --------------------------------------- -->
+    <header>
+
+    </header>
+    <!-- -------------------------------------
+        END Of Header
+    ----------------------------------------->
+
+    <main>
+        <!-- -----------------------------
+            Hero start from here 
+        ------------------------------- -->
+        <div class="container">
+            <div class="hero-content">
+                <h1 class="title">Start your Journey as Influencer</h1>
+                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                <a class="button" href="#">Preebook now <i class="fas fa-arrow-right"></i></a>
+            </div>
+            <div class="hero-feature-img">
+                <img src="assets/img/home/camera.png" alt="">
+            </div>
+        </div>
+
+        <!-- -----------------------------
+            End of hero
+        ------------------------------- -->
+
+        <!-- -----------------------------
+            Company logo start from here
+        ------------------------------- -->
+            <div class="container">
+                <div class="company-logo">
+                    <ul>
+                        <li><a href="#"><img src="assets/img/logos/Alibaba.svg" alt=""></a></li>
+                        <li><a href="#"><img src="assets/img/logos/Alibaba.svg" alt=""></a></li>
+                        <li><a href="#"><img src="assets/img/logos/Alibaba.svg" alt=""></a></li>
+                        <li><a href="#"><img src="assets/img/logos/Alibaba.svg" alt=""></a></li>
+                        <li><a href="#"><img src="assets/img/logos/Alibaba.svg" alt=""></a></li>
+                        <li><a href="#"><img src="assets/img/logos/Alibaba.svg" alt=""></a></li>
+                        <li><a href="#"><img src="assets/img/logos/Alibaba.svg" alt=""></a></li>
+                    </ul>
+                </div>
+            </div>
+        <!-- -----------------------------
+            End of company logo
+        ------------------------------- -->
+    </main>
+
 </body>
 </html>
